# rusty-wassembly-game

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  index.html  index.js  package-lock.json  package.json  rustfmt.toml
src/: buttons.rs  game.rs  html.rs  js.rs  lib.rs  macros.rs  shapes.rs  types.rs  ui.rs  utils.rs
