[package]
name = "rusty-wassembly-game"
version = "0.0.1"
authors = ["Henri Timonen"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.58"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.35"
features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
